# log-viewer

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lv-app/: Cargo.toml  build.rs
crates/lv-app/src/: app.rs  dashboard.rs  fmt.rs  fonts.rs  i18n.rs  main.rs  session.rs  tab.rs
crates/lv-core/: Cargo.toml
crates/lv-core/examples/: gen_logs.rs  udp_send.rs
crates/lv-core/src/: archive.rs  arena.rs  export.rs  filter.rs  highlight.rs  ingest.rs  lib.rs  merge.rs  model.rs  search.rs  stats.rs  store.rs  symbols.rs  view.rs
crates/lv-core/src/parse/: detect.rs  jsonline.rs  mod.rs  rfc3164.rs  rfc5424.rs  ts.rs  uf_file.rs
crates/lv-core/src/source/: file.rs  mod.rs  udp.rs
crates/lv-core/tests/: e2e.rs  perf.rs
docs/: 00-requirements.md  01-code-review.md
docs/ref/: logging-implementation-notes.md  logging-system.md
