[workspace]
resolver = "2"
members = ["crates/lv-core", "crates/lv-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = ""

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
crossbeam-channel = "0.5"
flate2 = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# 性能验证用：带优化的测试运行
[profile.perf]
inherits = "release"
strip = false
