[package]
name = "lv-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Log viewer desktop application (egui)"

[[bin]]
name = "logviewer"
path = "src/main.rs"

[dependencies]
lv-core = { path = "../lv-core" }
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eframe = "0.34.3"
egui_extras = "0.34.3"
egui_plot = "0.34"
rfd = "0.17.2"
dirs = "6"

[dev-dependencies]
tempfile = { workspace = true }
