[package]
name = "lv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Log viewer core: parsing, sources, storage, filtering, merging, archiving, export"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
